Java 21 update to URL creation as new URL is deprecated