@@ -24,7 +24,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.BufferedInputStream;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Path;
 
 import org.junit.Ignore;
@@ -83,7 +83,8 @@ public class FileSeekTest {
 		}
 
 		if ( !FileSystemUtil.exists( testBinaryFile ) ) {
-			BufferedInputStream urlStream = new BufferedInputStream( new URL( "https://ortus-public.s3.amazonaws.com/logos/ortus-medium.jpg" ).openStream() );
+			BufferedInputStream urlStream = new BufferedInputStream(
+			    URI.create( "https://ortus-public.s3.amazonaws.com/logos/ortus-medium.jpg" ).toURL().openStream() );
 			FileSystemUtil.write( testBinaryFile, urlStream.readAllBytes(), true );
 		}
 
